Bug 486837 - upon new contact creation, KAddressbook always warns: Location was not saved. Do you want to close editor?
Summary: upon new contact creation, KAddressbook always warns: Location was not saved....
Status: RESOLVED FIXED
Alias: None
Product: kaddressbook
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2024-05-10 08:27 UTC by Robert Riemann
Modified: 2024-05-13 05:22 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 24.05.0
Sentry Crash Report:


Attachments
screenshot with warning message (230.25 KB, image/png)
2024-05-10 08:27 UTC, Robert Riemann
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Robert Riemann 2024-05-10 08:27:56 UTC
Created attachment 169358 [details]
screenshot with warning message

SUMMARY

When I create a new contact or edit an existing contract, I get the following warning even though I have not touched any location-related elements in the contact card: "Location was not saved. Do you want to close editor?"


STEPS TO REPRODUCE
1. create a new contact in an addressbook (I use a carddav remote addressbook)
2. add a name and an email address
3. click save
4. see the warning: Location was not saved. Do you want to close editor?

OBSERVED RESULT

I get a warning that I have to accept.

EXPECTED RESULT

I only get such a warning if I have changed the location fields.

SOFTWARE/OS VERSIONS

I am using the fedora repository flatpak of kontact in version 6.0.2.

ADDITIONAL INFORMATION
Comment 1 Ricardo J. Barberis 2024-05-12 20:54:45 UTC
This also happens to me, even aditing an existing contact. not only adding a new one.
I use a local file to save my contacts.

System info:

Operating System: Fedora Linux 40
KDE Plasma Version: 6.0.4
KDE Frameworks Version: 6.1.0
Qt Version: 6.7.0
Kernel Version: 6.8.9-300.fc40.x86_64 (64-bit)
Graphics Platform: X11
Comment 2 Ricardo J. Barberis 2024-05-12 21:08:02 UTC
Also, the "Cancel edit?" dialog box when I didn't change anything is pretty annoying.
This one is older but I never bothered to report it.
Should I open another bug report or do you think it's related?
Comment 3 Laurent Montel 2024-05-13 05:22:12 UTC
Git commit ca1a27277596327c21510bb4edf4e1290945c133 by Laurent Montel.
Committed on 13/05/2024 at 05:21.
Pushed by mlaurent into branch 'release/24.05'.

Fix 486837: " upon new contact creation, KAddressbook always warns: Location was not saved. Do you want to close editor?"
FIXED-IN: 24.05.0

M  +12   -8    src/akonadi-contacts-widgets/contacteditordialog.cpp
M  +1    -0    src/akonadi-contacts-widgets/editor/addresseditor/addresslocationwidget.cpp

https://invent.kde.org/pim/akonadi-contacts/-/commit/ca1a27277596327c21510bb4edf4e1290945c133