Fix 486837: " upon new contact creation, KAddressbook always warns: Location was not saved. Do you want to close editor?"

BUG: 486837
FIXED-IN: 24.05.0